--- a/client/templates/dashboard.html
+++ b/client/templates/dashboard.html
@@ -1,7 +1,7 @@
 <div>
   <adf-dashboard name="{{dashboard.name}}" structure="4-8" adf-model="dashboard.model" />
 </div>
-<div class="footer" ng-hide="dashboard.id == '_commun'">
+<div class="footer" ng-hide="dashboard.name == '_commun'">
   <button class="btn btn-warning" ng-click="dashboard.delete(dashboard.name)">
     <span class="glyphicon glyphicon-remove"></span> Delete
   </button>
