--- a/client/templates/accueil.html
+++ b/client/templates/accueil.html
@@ -2,25 +2,35 @@
 
 <p> Page de Test </p>
 
-<p ng-repeat="b in beerU"> {{b.user}} {{b.beer}} <i class="fa fa-beer fa-lg" aria-hidden="true" ></i>
+<div class="row">
+  <div class="col-md-8">
+    <p ng-repeat="b in beerU"> {{b.user}} {{b.beer}} <i class="fa fa-beer fa-lg" aria-hidden="true" ></i>
+      <i class="fa fa-plus-circle" aria-hidden="true" ng-click="addBeer(beerU, $index)"></i>
+      <i class="fa fa-minus-circle" aria-hidden="true" ng-click="removeBeer(beerU, $index)"></i>
+    </p>
 
-<i class="fa fa-plus-circle" aria-hidden="true" ng-click="addBeer(beerU, $index)"></i>
-<i class="fa fa-minus-circle" aria-hidden="true" ng-click="removeBeer(beerU, $index)"></i>
-</p>
+    <form role="form">
+      <div>
+        <label> Add a Drunk Guy </label>
+      </div>
 
-<form role="form">
-  <div>
-    <label> Add a Drunk Guy </label>
+      <div class="form-inline padding-bottom">
+        <input type="text" id="name" class="form-control" placeholder="Name" ng-model="user.name">
+        <button type="button" class="btn btn-primary" ng-click="addUser(user.name)">
+          <i class="fa fa-plus"></i> Add
+        </button>
+      </div>
+    </form>
+
   </div>
-
-  <div class="form-inline padding-bottom">
-    <input type="text" id="name" class="form-control" placeholder="Name" ng-model="user.name">
-    <button type="button" class="btn btn-primary" ng-click="addUser(user.name)">
-      <i class="fa fa-plus"></i> Add
-    </button>
+  <div class="col-md-4">
+    <canvas id="beerDoughnut" class="chart chart-doughnut" chart-data="beerValue" chart-labels="beerUser"></canvas>
   </div>
-</form>
+</div>
 
+
+
+<!--
 <form role="form">
   <div class"form-group row">
     <label for="user">User</label>
@@ -32,4 +42,4 @@
     <label for="password">Password</label>
     <input type="password" id="password" class="form-control" placeholder="Password" ng-model="user.password" required="">
   </div>
-</form>
+</form> -->
