Single value widget

--- a/client/widgets/singleValue/src/view/view.html
+++ b/client/widgets/singleValue/src/view/view.html
@@ -11,7 +11,7 @@
     </div>
     <ul class="list-inline text-center">
       <li ng-repeat="addData in sv.data.additionalData">
-        {{addData.title}} : {{addData.value}}
+        {{addData.title}} : {{addData.data}}
       </li>
     </ul>
   </div>
