--- a/client/widgets/lineChart/src/view/view.html
+++ b/client/widgets/lineChart/src/view/view.html
@@ -4,7 +4,7 @@
   </div>
   <div ng-show="graph.label">
     <div>
-      <canvas id="graph" class="chart-base" chart-type="graph.type" chart-data="graph.value" chart-labels="graph.label" chart-options="graph.options">
+      <canvas id="graph" class="chart-base" chart-type="graph.type" chart-data="graph.value" chart-labels="graph.label" chart-series="graph.series" chart-options="graph.options">
       </canvas>
     </div>
     <div>
