--- a/client/widgets/checkValue/src/view/view.html
+++ b/client/widgets/checkValue/src/view/view.html
@@ -2,11 +2,29 @@
   <div ng-hide="cv.data" class="alert alert-info" role="alert">
     Please insert a url to the widget configuration
   </div>
-  <div ng-show="cv.data">
-    <div class="text-center">
-      <i ng-show="cv.data.ok" class="fa fa-check fa-4x text-success" aria-hidden="true"></i>
-      <i ng-hide="cv.data.ok" class="fa fa-times fa-4x text-danger" aria-hidden="true"></i>
-      <p> {{cv.data.desc}} </p>
+  <div ng-show=cv.data>
+    <div ng-if="!cv.data.pourcent">
+      <div class="text-center">
+        <i ng-show="cv.data.ok" class="fa fa-check fa-4x text-success" aria-hidden="true"></i>
+        <i ng-hide="cv.data.ok" class="fa fa-times fa-4x text-danger" aria-hidden="true"></i>
+        <p> {{cv.data.desc}} : {{cv.data.data}}</p>
+      </div>
+    </div>
+    <div ng-if="cv.data.pourcent">
+      <div class="text-center">
+        <div ng-if="!cv.data.zero">
+          <i ng-if="cv.data.ok && cv.data.positif" class="fa fa-caret-up fa-5x text-success" aria-hidden="true"></i>
+          <i ng-if="!cv.data.ok && !cv.data.positif" class="fa fa-caret-down fa-5x text-danger" aria-hidden="true"></i>
+          <i ng-if="!cv.data.ok && cv.data.positif" class="fa fa-caret-up fa-5x text-danger" aria-hidden="true"></i>
+          <i ng-if="cv.data.ok && !cv.data.positif" class="fa fa-caret-down fa-5x text-success" aria-hidden="true"></i>
+        </div>
+        <i ng-if="cv.data.zero" class="fa fa-caret-right fa-5x text-warning" aria-hidden="true"></i>
+        <p uib-tooltip="{{cv.data.tooltip}}"tooltip-placement="bottom"> {{cv.data.desc}} :
+          <span ng-show="!cv.data.zero && cv.data.ok" class="text-success">{{cv.data.data}} %</span>
+          <span ng-show="!cv.data.zero && !cv.data.ok" class="text-danger">{{cv.data.data}} %</span>
+          <span ng-show="cv.data.zero" class="text-warning">{{cv.data.data}} %</span>
+        </p>
+      </div>
     </div>
   </div>
 </div>
