--- a/client/templates/navigation.html
+++ b/client/templates/navigation.html
@@ -56,8 +56,10 @@
           </ul>
         </li> -->
         <li>
-          <a href="#/boards/_documentation">Documentation</a>
+          <a href="#/boards/_documentation">Documentation <i class="fa fa-book fa-lg" aria-hidden="true"></i></a>
         </li>
+        <li>
+          <a href="#/boards/_bugs"> Bugs <i class="fa fa-bug fa-lg" aria-hidden="true"></i></a>
       </ul>
       <ul class="nav navbar-nav navbar-right" ng-controller="timeController as clock">
         <li>
