Add moddal check value

--- a/client/widgets/checkValue/src/view/view.html
+++ b/client/widgets/checkValue/src/view/view.html
@@ -2,11 +2,13 @@
   <div ng-hide="cv.data" class="alert alert-info" role="alert">
     Please insert a url to the widget configuration
   </div>
-  <div ng-show=cv.data>
+  <div ng-show=cv.data ng-click="cv.open()">
     <div ng-if="!cv.data.pourcent">
       <div class="text-center">
-        <i ng-show="cv.data.ok" class="fa fa-check fa-4x text-success" aria-hidden="true"></i>
-        <i ng-hide="cv.data.ok" class="fa fa-times fa-4x text-danger" aria-hidden="true"></i>
+        <div>
+          <i ng-show="cv.data.ok" class="fa fa-check fa-4x text-success" aria-hidden="true"></i>
+          <i ng-hide="cv.data.ok" class="fa fa-times fa-4x text-danger" aria-hidden="true"></i>
+        </div>
         <p> {{cv.data.desc}} : {{cv.data.data}}</p>
       </div>
     </div>
