--- a/client/templates/accueil.html
+++ b/client/templates/accueil.html
@@ -1,7 +1,7 @@
 <h1> Accueil Dashboard Infra </h1>
 
 <p> Page de Test </p>
-
+<!--
 <div class="row">
   <div class="col-md-8">
     <p ng-repeat="b in beerU"> {{b.user}} {{b.beer}} <i class="fa fa-beer fa-lg" aria-hidden="true" ></i>
@@ -26,21 +26,8 @@
   <div class="col-md-4">
     <canvas id="beerDoughnut" class="chart chart-doughnut" chart-data="beerValue" chart-labels="beerUser"></canvas>
   </div>
-</div>
+</div> -->
 
+<p> {{auth.user.displayName}} </p>
 
-
-<p access-Level="admin"> OK </p>
-<!--
-<form role="form">
-  <div class"form-group row">
-    <label for="user">User</label>
-    <div class="col-sm-10">
-      <input type="text" id="user" class="form-control" placeholder="User" ng-model="user.user" required="">
-    </div>
-  </div>
-  <div class="form-group row">
-    <label for="password">Password</label>
-    <input type="password" id="password" class="form-control" placeholder="Password" ng-model="user.password" required="">
-  </div>
-</form> -->
+<p access-Level="dev"> OK </p>
