--- a/client/templates/navigation.html
+++ b/client/templates/navigation.html
@@ -42,19 +42,19 @@
             </li>
           </ul>
         </li>
-        <!-- <li uib-dropdown on-toggle="toggled(open)">
-          <a href id="unix" uib-dropdown-toggle>
-            Perso <i class="fa fa-linux fa-lg" aria-hidden="true"></i>
+        <li uib-dropdown on-toggle="toggled(open)">
+          <a href id="perso" ng-click="nav.load()" uib-dropdown-toggle>
+            Perso <i class="fa fa-user fa-lg" aria-hidden="true"></i>
           </a>
-          <ul class="dropdown-menu" uib-dropdown-menu aria-labelledby="unix">
-            <li ng-class="nav.navClass('boards/' + item.id)" ng-repeat="item in nav.items | orderBy: title" ng-if="item.id.indexOf('_unix') == 0">
+          <ul class="dropdown-menu" uib-dropdown-menu aria-labelledby="perso">
+            <li ng-class="nav.navClass('boards/' + item.id)" ng-repeat="item in nav.items | orderBy: title" ng-if="item.id.indexOf(nav.path) == 0">
               <a ng-href="#/boards/{{item.id}}">{{item.title}}</a>
             </li>
             <li>
-              <a style="cursor: pointer;" ng-click="nav.create('unix')">Create</a>
+              <a style="cursor: pointer;" ng-click="nav.create(nav.user)">Create</a>
             </li>
           </ul>
-        </li> -->
+        </li>
         <li>
           <a href="#/boards/_documentation">Documentation <i class="fa fa-book fa-lg" aria-hidden="true"></i></a>
         </li>
