--- a/client/templates/custom-dashboard-title.html
+++ b/client/templates/custom-dashboard-title.html
@@ -7,7 +7,7 @@
     <a href="" ng-if="editMode" title="Editer le dashboard" ng-click="editDashboardDialog()">
       <i class="glyphicon glyphicon-cog"></i>
     </a>
-    <a href="" access-level="admin" ng-if="options.editable" title="{{editMode ? 'Sauvegarder' : 'Mode Edition'}}" ng-click="toggleEditMode()">
+    <a href="" access-level="{{model.env}}" ng-if="options.editable" title="{{editMode ? 'Sauvegarder' : 'Mode Edition'}}" ng-click="toggleEditMode()">
       <i class="glyphicon" x-ng-class="{'glyphicon-edit' : !editMode, 'glyphicon-save' : editMode}"></i>
     </a>
     <a href="" ng-if="editMode" title="Annuler les changements" ng-click="cancelEditMode()">
