--- a/client/templates/navigation.html
+++ b/client/templates/navigation.html
@@ -7,7 +7,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Accueil <i class="fa fa-beer fa-lg" aria-hidden="true" ></i></a>
+      <a class="navbar-brand" href="#">Accueil <i class="fa fa-table fa-lg" aria-hidden="true" ></i></a>
     </div>
     <div uib-collapse="nav.navCollapsed" class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
