--- a/client/widgets/checkStandard/src/view/view.html
+++ b/client/widgets/checkStandard/src/view/view.html
@@ -3,8 +3,8 @@
     Please configure the widget
   </div>
   <div class="text-center" ng-show=cs.data ng-click="cs.open()">
-    <i ng-show="cs.data.config.positif" class="fa fa-check fa-4x text-success" aria-hidden="true">{{cs.data.data.length}}</i>
-    <i ng-hide="cs.data.config.positif" class="fa fa-times fa-4x text-danger" aria-hidden="true">{{cs.data.data.length}}</i>
+    <i ng-show="cs.data.positif" class="fa fa-check fa-4x text-success" aria-hidden="true">{{cs.data.data.length}}</i>
+    <i ng-hide="cs.data.positif" class="fa fa-times fa-4x text-danger" aria-hidden="true">{{cs.data.data.length}}</i>
     <p uib-tooltip="{{cs.data.config.tooltip}}" tooltip-placement="bottom"> {{cs.small}} </p>
   </div>
 </div>
