correction bug dash perso

--- a/client/templates/custom-dashboard-title.html
+++ b/client/templates/custom-dashboard-title.html
@@ -1,3 +1,5 @@
+<div ng-if="editMode" class="alert alert-info"> Mode Edition activé, Pensez à sauvegarder les changements une fois terminés. </div>
+
 <h1>
   {{model.title}}
   <span style="font-size: 16px" class="pull-right">
