--- a/client/templates/custom-add-widget.html
+++ b/client/templates/custom-add-widget.html
@@ -9,9 +9,9 @@
     <dl class="dl-horizontal">
       <dt ng-repeat-start="widget in widgets | adfOrderByObjectKey: 'key'">
         <a href="" ng-click="addWidget(widget.key)" ng-switch="widget.title">
-          <i ng-switch-when="checkStandard" class="fa fa-check-square" aria-hidden="true"></i>
-          <i ng-switch-when="pieChart" class="fa fa-pie-chart" aria-hidden="true"></i>
-          <i ng-switch-when="lineChart" class="fa fa-line-chart" aria-hidden="true"></i>
+          <i ng-switch-when="Check Perso" class="fa fa-check-square" aria-hidden="true"></i>
+          <i ng-switch-when="Camembert" class="fa fa-pie-chart" aria-hidden="true"></i>
+          <i ng-switch-when="Graphique" class="fa fa-line-chart" aria-hidden="true"></i>
           <i ng-switch-when="Tableau Paginé" class="fa fa-list-alt" aria-hidden="true"></i>
           {{widget.title}}
         </a>
