--- a/client/templates/dashboard.html
+++ b/client/templates/dashboard.html
@@ -1,5 +1,5 @@
 <div>
-  <adf-dashboard name="{{dashboard.name}}" structure="4-8" adf-model="dashboard.model" />
+  <adf-dashboard name="{{dashboard.name}}" structure="4-8" adf-model="dashboard.model" adf-widget-filter="widgetFilter"/>
 </div>
 <div class="footer" ng-hide="dashboard.name == '_commun'">
   <button ng-hide="dashboard.model.env == 'perso'" access-level="admin" class="btn btn-warning" ng-click="dashboard.delete(dashboard.name)">
