--- a/client/templates/accueil.html
+++ b/client/templates/accueil.html
@@ -14,4 +14,9 @@
 </div>
 <p> {{auth.user.displayName}} </p>
 
+<select>
+  <option> <a> aa <a> <div> <a> aa </a></div></a><option>
+
+</select>
+
 <p access-Level="admin"> OK </p>
