add selecttree to widget

--- a/client/widgets/paginateTable/src/view/modal.html
+++ b/client/widgets/paginateTable/src/view/modal.html
@@ -1,6 +1,7 @@
 
     <div class="modal-header">
       <h3 class="modal-title" id="modal-title"> Title </h3>
+      <i ng-click="$dismiss()" class="fa fa-times-circle" aria-hidden="true"><i>
     </div>
     <div class="modal-body" id="modal-body">
       {{cm.un}}
