--- a/client/widgets/checkStandard/src/view/modal.html
+++ b/client/widgets/checkStandard/src/view/modal.html
@@ -4,16 +4,18 @@
       <i ng-click="$dismiss()" class="fa fa-times-circle" aria-hidden="true"><i>
     </div>
     <div class="modal-body" id="modal-body">
-      <table  class="table">
-        <tr>
-          <th ng-repeat="head in cm.data.headers" ng-click="cm.sortIndex($index)">
-            {{head}}
-          </th>
-        </tr>
-        <tr ng-repeat="row in cm.data.rows| orderBy:cm.sorter:cm.reverseSort track by $index">
-          <td ng-repeat="col in row track by $index">
-            {{col}}
-          </td>
-        </tr>
-      </table>
+      <div class="table-responsive">
+        <table  class="table">
+          <tr>
+            <th ng-repeat="head in cm.data.headers" ng-click="cm.sortIndex($index)">
+              {{head}}
+            </th>
+          </tr>
+          <tr ng-repeat="row in cm.data.rows| orderBy:cm.sorter:cm.reverseSort track by $index">
+            <td ng-repeat="col in row track by $index">
+              {{col}}
+            </td>
+          </tr>
+        </table>
+      </div>
     </div>
