--- a/client/widgets/paginateTable/src/view/view.html
+++ b/client/widgets/paginateTable/src/view/view.html
@@ -6,18 +6,20 @@
     <div class="text-center">
       <input type="search" ng-model="q" placeholder="Filter" class="form-control">
     </div>
-    <table  class="table">
-      <tr>
-        <th ng-repeat="head in pt.data.headers" ng-click="pt.sortIndex($index)">
-          {{head}}
-        </th>
-      </tr>
-      <tr ng-repeat="row in filterData = (pt.data.rows | filter:q )| orderBy:pt.sorter:pt.reverseSort| startFrom: (pt.data.currentPage-1)*pt.data.itemPerPage | limitTo:pt.data.itemPerPage track by $index" ng-click="pt.open(row)">
-        <td ng-repeat="col in row track by $index">
-          {{col}}
-        </td>
-      </tr>
-    </table>
+    <div class="table-responsive"> <!-- Add Horizontal Scroll Bad -->
+      <table  class="table">
+        <tr>
+          <th ng-repeat="head in pt.data.headers" ng-click="pt.sortIndex($index)">
+            {{head}}
+          </th>
+        </tr>
+        <tr ng-repeat="row in filterData = (pt.data.rows | filter:q )| orderBy:pt.sorter:pt.reverseSort| startFrom: (pt.data.currentPage-1)*pt.data.itemPerPage | limitTo:pt.data.itemPerPage track by $index" ng-click="pt.open(row)">
+          <td ng-repeat="col in row track by $index">
+            {{col}}
+          </td>
+        </tr>
+      </table>
+    </div>
     <div class="text-center">
       <ul uib-pagination total-items="filterData.length" ng-model="pt.data.currentPage" max-size="pt.data.maxSize" class="pagination-sm" boundary-links="true"items-per-page="pt.data.itemPerPage" num-pages="numPages"></ul>
     </div>
