--- a/client/widgets/paginateTable/src/view/modal.html
+++ b/client/widgets/paginateTable/src/view/modal.html
@@ -1,10 +1,11 @@
 
     <div class="modal-header">
       <h3 class="modal-title" id="modal-title"> Title </h3>
-      <i ng-click="$dismiss()" class="fa fa-times-circle" aria-hidden="true"><i>
+      <button type="button" class="close" ng-click="$dismiss()" aria-hidden="true">&times;</button>
+
     </div>
     <div class="modal-body" id="modal-body">
-      <div class="table-responsive">
+      <!-- <div class="table-responsive">
         <table  class="table">
           <tr>
             <th ng-repeat="head in cm.data.headers" ng-click="cm.sortIndex($index)">
@@ -17,5 +18,6 @@
             </td>
           </tr>
         </table>
-      </div>
+      </div> -->
+      <modal-table data="cm.data"></modal-table>
     </div>
