--- a/client/widgets/pieChart/src/view/view.html
+++ b/client/widgets/pieChart/src/view/view.html
@@ -11,5 +11,6 @@
     <div>
       <p class="text-center"> {{graph.desc}} </p>
     </div>
+    <a type=button ng-click="graph.export($event)"> Export </a>
   </div>
 </div>
