--- a/client/widgets/paginateTable/src/view/view.html
+++ b/client/widgets/paginateTable/src/view/view.html
@@ -3,6 +3,17 @@
     Please insert a url to the widget configuration
   </div>
   <div ng-show="pt.data">
+
+    <div class="col-md-3 text-center v-cent">
+      <p> Nombre d'élément : {{pt.data.rows.length}} </p>
+    </div>
+    <div class="col-md-3 col-md-offset-6 text-center marg">
+      <button type="button" class="btn btn-success" ng-csv="pt.getData()" csv-header="pt.getHeader()" field-separator=";" filename="pt.data.config.title + '.csv'">
+        <i class="fa fa-file-excel-o" aria-hidden="true"></i> Export
+      </button>
+    </div>
+    <br/>
+
     <div class="text-center">
       <input type="search" ng-model="q" placeholder="Filter" class="form-control">
     </div>
@@ -17,13 +28,15 @@
           <td ng-repeat="col in row track by $index">
             <span ng-if="(col != '0') && (col != '1')"> {{col}} </span>
             <span ng-if="col == '0'"> <i class="fa fa-times text-danger"> </span>
-            <span ng-if="col == '1'"> <i class="fa fa-check text-success"> </span> 
+            <span ng-if="col == '1'"> <i class="fa fa-check text-success"> </span>
           </td>
         </tr>
       </table>
     </div>
-    <div class="text-center">
+
+    <div>
       <ul uib-pagination total-items="filterData.length" ng-model="pt.data.currentPage" max-size="pt.data.maxSize" class="pagination-sm" boundary-links="true"items-per-page="pt.data.itemPerPage" num-pages="numPages"></ul>
     </div>
+
   </div>
 </div>
