add reverse dash

--- a/client/templates/navigation.html
+++ b/client/templates/navigation.html
@@ -64,6 +64,8 @@
               <a ng-href="#/boards/{{item.id}}">{{item.title}}</a>
             </li>
             <li>
+              <a style="cursor: pointer;" href="/#/boards/master"> Master Page</a>
+            <li>
               <a style="cursor: pointer;" ng-click="nav.create(nav.user)">Create</a>
             </li>
           </ul>
