new design button

--- a/client/widgets/pieChart/src/view/view.html
+++ b/client/widgets/pieChart/src/view/view.html
@@ -11,6 +11,6 @@
     <div>
       <p class="text-center"> {{graph.desc}} </p>
     </div>
-    <a type=button ng-click="graph.export($event)"> Export </a>
+    <a type=button ng-click="graph.export($event)"> <button type="button" class="btn btn-info" ><i class="fa fa-file-image-o" aria-hidden="true"></i> Export</button> </a>
   </div>
 </div>
