--- a/client/templates/directive/modalTable.html
+++ b/client/templates/directive/modalTable.html
@@ -6,7 +6,7 @@
 <div class="modal-body" id="modal-body">
 
   <div class="col-md-3 text-center v-cent">
-    <p> Nombre d'élément : {{data.rows.length}} </p>
+    <p> Nombre d'élément : {{data.rows.length}}</p>
   </div>
 
   <div class="col-md-3 col-md-offset-6 text-center">
@@ -28,16 +28,18 @@
         </th>
       </tr>
       <tr ng-repeat="row in filterData = (data.rows | filter:q )| orderBy:sorter:reverseSort| startFrom: (currentPage-1)*itemPerPage | limitTo:itemPerPage track by $index">
-        <td ng-repeat="col in row track by $index" ng-switch="col">
+        <td ng-repeat="col in row track by $index" ng-switch="col" my-right-click="goToMasterPage(this, $event)">
           <span ng-switch-when="0"> <i class="fa fa-times text-danger"></i> </span>
           <span ng-switch-when="1"> <i class="fa fa-check text-success"></i></span>
           <span ng-switch-default>{{col}}</span>
         </td>
+        <!-- <td>
+          <button type="button" class="btn btn-warning" ng-click="goToMasterPage()" uib-tooltip="Go to Master Page"> <i class="fa fa-external-link" aria-hidden="true"></i></button>
+        </td> -->
       </tr>
     </table>
   </div>
   <div class="text-center">
     <ul uib-pagination total-items="filterData.length" ng-model="currentPage" max-size="5" class="pagination-sm" boundary-links="true"items-per-page="itemPerPage" num-pages="numPages"></ul>
   </div>
-
 </div>
