--- a/client/widgets/lineChart/src/view/view.html
+++ b/client/widgets/lineChart/src/view/view.html
@@ -5,11 +5,12 @@
   <div ng-show="graph.label">
     {{config.urlReplace}}
     <div>
-      <canvas id="graph" class="chart-base" chart-type="graph.type" chart-data="graph.value" chart-labels="graph.label" chart-series="graph.series" chart-options="graph.options">
+      <canvas id="graph" class="chart-base" chart-type="graph.type" chart-data="graph.value" chart-labels="graph.label" chart-series="graph.series" chart-options="graph.options" chart-colors="graph.color">
       </canvas>
     </div>
     <div>
       <p class="text-center"> {{graph.desc}} </p>
     </div>
+    <my-export chart=graph.chart></my-export>
   </div>
 </div>
