--- a/client/widgets/paginateTable/src/view/view.html
+++ b/client/widgets/paginateTable/src/view/view.html
@@ -5,10 +5,10 @@
   <div ng-show="pt.data">
 
     <div class="col-md-3 text-center v-cent">
-      <p> Nombre d'élément : {{pt.data.rows.length}} </p>
+      <p> Nombre d'éléments : {{pt.data.rows.length}} </p>
     </div>
     <div class="col-md-3 col-md-offset-6 text-center marg">
-      <button type="button" class="btn btn-success" ng-csv="pt.getData()" csv-header="pt.getHeader()" field-separator=";" filename="pt.data.config.title + '.csv'">
+      <button type="button" class="btn btn-success" ng-csv="pt.getData()" csv-header="pt.getHeader()" field-separator=";" filename="{{$parent.model.title + '.csv'}}">
         <i class="fa fa-file-excel-o" aria-hidden="true"></i> Export
       </button>
     </div>
@@ -26,15 +26,16 @@
         </tr>
         <tr ng-repeat="row in filterData = (pt.data.rows | filter:q )| orderBy:pt.sorter:pt.reverseSort| startFrom: (pt.data.currentPage-1)*pt.data.itemPerPage | limitTo:pt.data.itemPerPage track by $index" ng-click="pt.open(row)">
           <td ng-repeat="col in row track by $index">
-            <span ng-if="(col != '0') && (col != '1')"> {{col}} </span>
-            <span ng-if="col == '0'"> <i class="fa fa-times text-danger"> </span>
-            <span ng-if="col == '1'"> <i class="fa fa-check text-success"> </span>
+            <span ng-if="!col.opt"> {{col.value}} </span>
+            <span ng-if="col.opt && (col.value != '0') && (col.value != '1')"> {{col.value}} </span>
+            <span ng-if="col.opt && col.value == '0'"> <i class="fa fa-times text-danger"> </span>
+            <span ng-if="col.opt && col.value == '1'"> <i class="fa fa-check text-success"> </span>
           </td>
         </tr>
       </table>
     </div>
 
-    <div>
+    <div class="text-center">
       <ul uib-pagination total-items="filterData.length" ng-model="pt.data.currentPage" max-size="pt.data.maxSize" class="pagination-sm" boundary-links="true"items-per-page="pt.data.itemPerPage" num-pages="numPages"></ul>
     </div>
 
