--- a/client/widgets/paginateTable/src/view/view.html
+++ b/client/widgets/paginateTable/src/view/view.html
@@ -4,17 +4,19 @@
   </div>
   <div ng-show="pt.data">
 
-    <div class="col-md-3 text-center v-cent">
-      <p> Nombre d'éléments : {{pt.data.rows.length}} </p>
+    <div ng-if="!pt.data.config.head" class= "col-md-12">
+      <div class="col-md-3 text-center v-cent">
+        <p> Nombre d'éléments : {{pt.data.rows.length}} </p>
+      </div>
+      <div class="col-md-3 col-md-offset-6 text-center marg">
+        <button type="button" class="btn btn-success" ng-csv="pt.getData()" csv-header="pt.getHeader()" field-separator=";" filename="{{$parent.model.title + '.csv'}}">
+          <i class="fa fa-file-excel-o" aria-hidden="true"></i> Export
+        </button>
+      </div>
+      <br/>
     </div>
-    <div class="col-md-3 col-md-offset-6 text-center marg">
-      <button type="button" class="btn btn-success" ng-csv="pt.getData()" csv-header="pt.getHeader()" field-separator=";" filename="{{$parent.model.title + '.csv'}}">
-        <i class="fa fa-file-excel-o" aria-hidden="true"></i> Export
-      </button>
-    </div>
-    <br/>
 
-    <div class="text-center">
+    <div ng-show="!pt.load" class="text-center">
       <input type="search" ng-model="q" placeholder="Filter" class="form-control">
     </div>
     <div class="table-responsive"> <!-- Add Horizontal Scroll Bad -->
@@ -24,18 +26,27 @@
             {{head}}
           </th>
         </tr>
-        <tr ng-repeat="row in filterData = (pt.data.rows | filter:q )| orderBy:pt.sorter:pt.reverseSort| startFrom: (pt.data.currentPage-1)*pt.data.itemPerPage | limitTo:pt.data.itemPerPage track by $index" ng-click="pt.open(row)">
-          <td ng-repeat="col in row track by $index">
-            <span ng-if="!col.opt"> {{col.value}} </span>
-            <span ng-if="col.opt && (col.value != '0') && (col.value != '1')"> {{col.value}} </span>
-            <span ng-if="col.opt && col.value == '0'"> <i class="fa fa-times text-danger"> </span>
-            <span ng-if="col.opt && col.value == '1'"> <i class="fa fa-check text-success"> </span>
+        <tr ng-repeat="row in filterData = (pt.data.rows | filter:q | orderBy:pt.sorter:pt.reverseSort) | startFrom: (pt.data.currentPage-1)*pt.data.itemPerPage | limitTo:pt.data.itemPerPage track by $index" ng-click="pt.open($index, filterData)">
+          <td ng-repeat="col in row track by $index" ng-switch="col.opt">
+            <span ng-switch-default> {{col.value}} </span>
+
+            <!-- Booleen -->
+            <span ng-switch-when="bool" ng-if="(col.value != '0') && (col.value != '1')"> {{col.value}} </span>
+            <span ng-switch-when="bool" ng-if="col.value == '0'"> <i class="fa fa-times text-danger"> </span>
+            <span ng-switch-when="bool" ng-if="col.value == '1'"> <i class="fa fa-check text-success"> </span>
+
+            <!-- Seuil -->
+            <span ng-switch-when="seuil"> {{col.value}}</span>
           </td>
         </tr>
       </table>
     </div>
 
-    <div class="text-center">
+    <div ng-hide="!pt.load" class="text-center ">
+      <i class="fa fa-spinner fa-pulse fa-3x" aria-hidden="true"></i>
+    </div>
+
+    <div class="text-center" ng-if="filterData.length > pt.data.itemPerPage">
       <ul uib-pagination total-items="filterData.length" ng-model="pt.data.currentPage" max-size="pt.data.maxSize" class="pagination-sm" boundary-links="true"items-per-page="pt.data.itemPerPage" num-pages="numPages"></ul>
     </div>
 
