new feature PT : seuil

--- a/client/templates/custom-dashboard-title.html
+++ b/client/templates/custom-dashboard-title.html
@@ -5,7 +5,7 @@
 <h1>
   {{model.title}}
   <span style="font-size: 16px" class="pull-right">
-    <a href="" ng-if="editMode" title="Déplacer le Dash" ng-controller="copyCtrl as cp" ng-click="cp.copyDialog()">
+    <a href="" ng-if="editMode" title="Copier le Dash" ng-controller="copyCtrl as cp" ng-click="cp.copyDialog()">
       <i class="glyphicon glyphicon-copy" aria-hidden=true></i>
     </a>
     <a href="" ng-if="editMode" title="Ajouter un Widget" ng-click="addWidgetDialog()">
