--- a/client/widgets/singleValue/src/view/view.html
+++ b/client/widgets/singleValue/src/view/view.html
@@ -2,11 +2,14 @@
   <div ng-hide="sv.data" class="alert alert-info" role="alert">
     Please insert a url to the widget configuration
   </div>
-  <div ng-show="sv.data">
-    <div>
-      <h1 class="text-center">
+  <div ng-show="!sv.data.load">
+    <div class="text-center col-md-12">
+      <h3  style="word-wrap: break-word" ng-class="sv.getSeuilColor()">
+        <span ng-if="sv.data.config.format == 'custom'"> {{sv.data.config.custom.prepend}} </span>
         {{sv.data.principalData.data}}
-      </h1>
+        <span ng-if="sv.data.config.format == 'percent'"> % </span>
+        <span ng-if="sv.data.config.format == 'custom'"> {{sv.data.config.custom.append}} </span>
+      </h3>
       <p class="text-center small"> {{sv.data.principalData.desc}} </p>
     </div>
     <ul class="list-inline text-center">
@@ -14,5 +17,8 @@
         {{addData.title}} : {{addData.data}}
       </li>
     </ul>
+  </div>
+  <div ng-hide="!sv.data.load" class="text-center ">
+    <i class="fa fa-spinner fa-pulse fa-3x" aria-hidden="true"></i>
   </div>
 </div>
