Can now change color of pieChart

--- a/client/widgets/pieChart/src/view/view.html
+++ b/client/widgets/pieChart/src/view/view.html
@@ -4,7 +4,7 @@
   </div>
   <div ng-show="graph.label">
     <div>
-      <canvas id="graph" class="chart-base" ng-class="{click : graph.config.mode == 'std'}" chart-type="graph.type" chart-data="graph.value" chart-labels="graph.label" chart-colors="graph.config.color"chart-options="graph.options" chart-click="graph.open">
+      <canvas id="graph" class="chart-base" ng-class="{click : graph.config.mode == 'std'}" chart-type="graph.type" chart-data="graph.value" chart-labels="graph.label" chart-colors="graph.color" chart-options="graph.options" chart-click="graph.open">
       </canvas>
     </div>
     <div>
