--- a/client/widgets/lineChart/src/view/view.html
+++ b/client/widgets/lineChart/src/view/view.html
@@ -2,7 +2,7 @@
   <div ng-hide="graph.label" class="alert alert-info" role="alert">
     Please insert a url to the widget configuration
   </div>
-  <div ng-show="graph.label">
+  <div ng-show="graph.label && !graph.load">
     <div>
       <canvas id="graph" class="chart-base" chart-type="graph.type" chart-data="graph.value" chart-labels="graph.label" chart-series="graph.series" chart-options="graph.options" chart-colors="graph.color">
       </canvas>
@@ -11,5 +11,8 @@
       <p class="text-center"> {{graph.desc}} </p>
     </div>
     <my-export chart=graph.chart></my-export>
+  </div>
+  <div ng-show="graph.load">
+    <div ng-include="'/templates/directive/loader.html'">
   </div>
 </div>
