--- a/client/widgets/checkValue/src/view/modal.html
+++ b/client/widgets/checkValue/src/view/modal.html
@@ -1,19 +1,1 @@
-
-    <div class="modal-header">
-      <h3 class="modal-title" id="modal-title"> Title </h3>
-    </div>
-    <div class="modal-body" id="modal-body">
-      {{cm.un}}
-      <table  class="table">
-        <tr>
-          <th ng-repeat="head in cm.data.headers" ng-click="cm.sortIndex($index)">
-            {{head}}
-          </th>
-        </tr>
-        <tr ng-repeat="row in cm.data.rows| orderBy:cm.sorter:cm.reverseSort track by $index">
-          <td ng-repeat="col in row track by $index">
-            {{col}}
-          </td>
-        </tr>
-      </table>
-    </div>
+<modal-table data=cm.data></modal-table>
